ログイン認証実装

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -16,6 +16,7 @@ BASE
     --color-orange-light: #f3c897;
     --color-orange: #f1a957;
     --color-white: #fff;
+    --color-red: #fe5050;
 
     --color-background: #061E22;
     --color-background-side: #374a4e;
