--- a/src/assets/page-top.css
+++ b/src/assets/page-top.css
@@ -9,6 +9,19 @@ TOPページのみに適用されるCSSです
 /* ------------------------------
     サイドバー 
 ------------------------------ */
+/* ログイン済み */
+.is_secret_mode {
+    margin: 2rem auto;
+    display: block;
+    text-align: center;
+    color: var(--color-orange);
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+a.is_secret_mode:hover {
+    opacity: 0.7;
+}
+
 .filter input[type="checkbox"] {
     display: none;
 }
