管理画面で認証コード生成できるように

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -17,6 +17,9 @@ BASE
     --color-orange: #f1a957;
     --color-white: #fff;
     --color-red: #fe5050;
+    --color-blue: #3dcefb;
+
+    --color-background-white-transparent: #ffffffcc;
 
     --color-background: #061E22;
     --color-background-side: #374a4e;
