--- a/src/assets/page-details.css
+++ b/src/assets/page-details.css
@@ -128,6 +128,10 @@ PAGE-DETAILS
     display: block;
     text-align: center;
 }
+.main--image.image--sp {
+    max-width: 700px;
+    margin: 0 auto;
+}
 
 .nodata {
     width: 100%;
