--- a/src/assets/page-top.css
+++ b/src/assets/page-top.css
@@ -128,7 +128,7 @@ a.is_secret_mode:hover {
     font-size: 1.4rem; font-weight: bold;
     position: absolute;
     bottom: 0; left: 0; right: 0;
-    background-color: var(--color-gray);
+    background-color: var(--color-background-white-transparent);
 }
 
 .nodata {
