--- a/src/assets/page-top.css
+++ b/src/assets/page-top.css
@@ -16,7 +16,7 @@ TOPページのみに適用されるCSSです
     text-align: center;
     color: var(--color-orange);
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 12px;
 }
 a.is_secret_mode:hover {
     opacity: 0.7;
@@ -30,7 +30,7 @@ a.is_secret_mode:hover {
 .filter .multiselect--label {
     margin: 0 auto 1rem;
     padding: 0.5rem 1rem;
-    font-size: 1.2rem; font-weight: normal;
+    font-size: 12px; font-weight: normal;
     color: var(--color-black);
     display: inline-block;
     border-radius: 10px;
@@ -92,7 +92,7 @@ a.is_secret_mode:hover {
 }
 .filter--name {
     margin-bottom: 13px;
-    font-size: 1.6rem;
+    font-size: 16px;
 }
 
 
@@ -101,8 +101,16 @@ a.is_secret_mode:hover {
 ------------------------------ */
 .main--details {
     margin: 6rem 0 6rem 2rem;
-    font-size: 1.6rem;
+    font-size: 16px;
+    line-height: 1.5em;
     color: var(--color-gray);
+}
+
+@media (max-width: 768px) {
+    .main--details {
+        margin: 6rem 0 6rem 9rem;
+        padding-right: 1em;
+    }
 }
 .list_area {
     width: 100%;
@@ -126,7 +134,7 @@ a.is_secret_mode:hover {
     width: 100%; height: 3em;
     padding: 10px;
     color: var(--color-black);
-    font-size: 1.4rem; font-weight: bold;
+    font-size: 14px; font-weight: bold;
     position: absolute;
     bottom: 0; left: 0; right: 0;
     backdrop-filter: blur(15px);
@@ -146,7 +154,7 @@ a.is_secret_mode:hover {
 .nodata {
     width: 100%;
     padding: 4rem 0;
-    font-size: 2rem;
+    font-size: 20px;
     line-height: 2em;
     color: var(--color-orange-light);
     text-align: center;
